--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">BitcoinConversionApp</string>
+    <string name="enter_name_text_view">Enter your name:</string>
+    <string name="enter_button_text" />
+    <string name="calling_activity_message" />
+    <string name="enter_name_button_text">enter</string>
+    <string name="name_message">The user name is</string>
+    <string name="get_user_name_text_view">Get User Name</string>
+    <string name="user_name_sent_text_view">Hello,</string>
 </resources>
